setup/backend/sandboxserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandboxserver-deployment
  namespace: iudx-sandbox
spec:
  selector:
    matchLabels:
      app: sandboxserver
  template:
    metadata:
      labels:
        app: sandboxserver
    spec:
      imagePullSecrets:
      - name: image-pull-secret
      containers:
      - name: sandboxserver-container
        image: private-registry.iudx.org.in/sandbox-backend-dev:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

      tolerations:
      - key: "target.application"
        operator: "Equal"
        value: "sandbox"
        effect: "NoSchedule"
