setup/backend/sandboxerver-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandboxserver
  namespace: iudx-sandbox
spec:
  type: ClusterIP 
  selector:
    app: sandboxserver
  ports:
  - port: 8080
    targetPort: 8080
